Add multiple user, add background photos and profile photos, change font size and colour, change cheers messages.